--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +10,31 @@
 
   <link rel="stylesheet" href="style.css" />
 
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Staatliches&display=swap" rel="stylesheet">
+
 </head>
 <body>
-  
+  <div class="page">
+    <header>
+      <h1>MENTORIA</h1>
+      <p>Preencha o formulário abaixo par agendar a sua mentoria</p>
+    </header>
+
+    <form id="my-form">
+      <fieldset>
+        <div class="fieldset-wrapper">
+          <legend>INFORMAÇÕES PESSOAIS</legend>
+          <div class="input-wrapper">
+            <label for="mentoring-name">Nome</label>
+            <input type="text" id="mentoring-name"/>
+          </div>
+          <div class="input-wrapper">
+            <label for="mentoring-lastname">Sobrenome</label>
+            <input type="text" id="mentoring-lastname"/>
+          </div>
+        </div>
+      </fieldset>
+    </form>
+  </div>
 </body>
 </html>
