--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </div>
           <div class="input-wrapper">
             <label for="mentoring-email">Email <span>(digite um email válido)</span></label>
-            <input type="email" id="mentoring-email"/>
+            <input type="email" id="mentoring-email" required/>
           </div>
           <div class="input-wrapper">
             <label for="mentoring-password">Senha <span>(mínimo de 6 caracteres)</span></label>
@@ -49,7 +49,7 @@
           <legend>INFORMAÇÕES DO MENTOR</legend>
           <div class="input-wrapper">
             <label for="mentoring-mentor">Nome do seu mentor <span>(só o primeiro nome)</span></label>
-            <input type="text" id="mentoring-mentor"/>
+            <input type="text" id="mentoring-mentor" required/>
           </div>
         </div>
       </fieldset>
@@ -59,7 +59,7 @@
         <div class="date">
           <div class="input-wrapper">
             <label for="mentoring-date">Data <span>(DD/MM/AAAA)</span></label>
-            <input type="date" id="mentoring-date"/>
+            <input type="date" id="mentoring-date" required/>
           </div>
           <div class="input-wrapper">
             <label for="mentoring-begin">Das</label>
@@ -74,7 +74,7 @@
         <div class="date">
           <div class="input-wrapper">
             <label for="mentoring-date2">Data <span>(DD/MM/AAAA)</span></label>
-            <input type="date" id="mentoring-date2"/>
+            <input type="date" id="mentoring-date2" required/>
           </div>
           <div class="input-wrapper">
             <label for="mentoring-end2">Das</label>
@@ -87,6 +87,9 @@
         </div>
       </fieldset>
     </form>
+    <footer>
+      <input class="button" type="submit" form="my-form" value="Salvar"/>
+    </footer>
   </div>
 </body>
 </html>
